Trabalho 3 - Compilador Mini Javascript/y.output
Terminals unused in grammar

    PRINT
    COMENTARIO
    IF
    WHILE
    FOR


Grammar

    0 $accept: S $end

    1 S: CMDs

    2 CMDs: CMD CMDs
    3     | %empty

    4 CMD: RVALUE ';'
    5    | CMD_DECL ';'

    6 LVALUE: ID

    7 LVALUEPROP: RVALUE '.' ID
    8           | RVALUE '[' RVALUE ']'

    9 RVALUE: ATRIB
   10       | RVALUE MEIG RVALUE
   11       | RVALUE MAIG RVALUE
   12       | RVALUE IG RVALUE
   13       | RVALUE DIF RVALUE
   14       | RVALUE '^' RVALUE
   15       | RVALUE '<' RVALUE
   16       | RVALUE '>' RVALUE
   17       | RVALUE '*' RVALUE
   18       | RVALUE '+' RVALUE
   19       | RVALUE '-' RVALUE
   20       | RVALUE '/' RVALUE
   21       | RVALUE '%' RVALUE
   22       | '+' RVALUE
   23       | '-' RVALUE
   24       | FINAL

   25 CMD_DECL: LET MULTI_DECL
   26         | VAR MULTI_DECL
   27         | CONST MULTI_DECL

   28 MULTI_DECL: LVALUE '=' RVALUE ',' MULTI_DECL
   29           | LVALUE '=' RVALUE
   30           | ID ',' MULTI_DECL
   31           | ID

   32 ATRIB: LVALUE '=' RVALUE
   33      | LVALUE MAATR RVALUE
   34      | LVALUEPROP '=' RVALUE
   35      | LVALUEPROP MEATR RVALUE

   36 FINAL: NUM
   37      | STRING
   38      | NEWOBJECT
   39      | NEWARRAY
   40      | '(' RVALUE ')'
   41      | LVALUE
   42      | LVALUEPROP


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 21
    '(' (40) 40
    ')' (41) 40
    '*' (42) 17
    '+' (43) 18 22
    ',' (44) 28 30
    '-' (45) 19 23
    '.' (46) 7
    '/' (47) 20
    ';' (59) 4 5
    '<' (60) 15
    '=' (61) 28 29 32 34
    '>' (62) 16
    '[' (91) 8
    ']' (93) 8
    '^' (94) 14
    error (256)
    PRINT (258)
    ID (259) 6 7 30 31
    NUM (260) 36
    MAIG (261) 11
    MEIG (262) 10
    IG (263) 12
    DIF (264) 13
    MAATR (265) 33
    MEATR (266) 35
    STRING (267) 37
    COMENTARIO (268)
    LET (269) 25
    CONST (270) 27
    VAR (271) 26
    IF (272)
    WHILE (273)
    FOR (274)
    NEWOBJECT (275) 38
    NEWARRAY (276) 39


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    S (39)
        on left: 1
        on right: 0
    CMDs (40)
        on left: 2 3
        on right: 1 2
    CMD (41)
        on left: 4 5
        on right: 2
    LVALUE (42)
        on left: 6
        on right: 28 29 32 33 41
    LVALUEPROP (43)
        on left: 7 8
        on right: 34 35 42
    RVALUE (44)
        on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
        on right: 4 7 8 10 11 12 13 14 15 16 17 18 19 20 21 22 23 28 29 32 33 34 35 40
    CMD_DECL (45)
        on left: 25 26 27
        on right: 5
    MULTI_DECL (46)
        on left: 28 29 30 31
        on right: 25 26 27 28 30
    ATRIB (47)
        on left: 32 33 34 35
        on right: 9
    FINAL (48)
        on left: 36 37 38 39 40 41 42
        on right: 24


State 0

    0 $accept: . S $end

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    LET        shift, and go to state 4
    CONST      shift, and go to state 5
    VAR        shift, and go to state 6
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    $default  reduce using rule 3 (CMDs)

    S           go to state 12
    CMDs        go to state 13
    CMD         go to state 14
    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 17
    CMD_DECL    go to state 18
    ATRIB       go to state 19
    FINAL       go to state 20


State 1

    6 LVALUE: ID .

    $default  reduce using rule 6 (LVALUE)


State 2

   36 FINAL: NUM .

    $default  reduce using rule 36 (FINAL)


State 3

   37 FINAL: STRING .

    $default  reduce using rule 37 (FINAL)


State 4

   25 CMD_DECL: LET . MULTI_DECL

    ID  shift, and go to state 21

    LVALUE      go to state 22
    MULTI_DECL  go to state 23


State 5

   27 CMD_DECL: CONST . MULTI_DECL

    ID  shift, and go to state 21

    LVALUE      go to state 22
    MULTI_DECL  go to state 24


State 6

   26 CMD_DECL: VAR . MULTI_DECL

    ID  shift, and go to state 21

    LVALUE      go to state 22
    MULTI_DECL  go to state 25


State 7

   38 FINAL: NEWOBJECT .

    $default  reduce using rule 38 (FINAL)


State 8

   39 FINAL: NEWARRAY .

    $default  reduce using rule 39 (FINAL)


State 9

   22 RVALUE: '+' . RVALUE

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 26
    ATRIB       go to state 19
    FINAL       go to state 20


State 10

   23 RVALUE: '-' . RVALUE

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 27
    ATRIB       go to state 19
    FINAL       go to state 20


State 11

   40 FINAL: '(' . RVALUE ')'

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 28
    ATRIB       go to state 19
    FINAL       go to state 20


State 12

    0 $accept: S . $end

    $end  shift, and go to state 29


State 13

    1 S: CMDs .

    $default  reduce using rule 1 (S)


State 14

    2 CMDs: CMD . CMDs

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    LET        shift, and go to state 4
    CONST      shift, and go to state 5
    VAR        shift, and go to state 6
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    $default  reduce using rule 3 (CMDs)

    CMDs        go to state 30
    CMD         go to state 14
    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 17
    CMD_DECL    go to state 18
    ATRIB       go to state 19
    FINAL       go to state 20


State 15

   32 ATRIB: LVALUE . '=' RVALUE
   33      | LVALUE . MAATR RVALUE
   41 FINAL: LVALUE .

    MAATR  shift, and go to state 31
    '='    shift, and go to state 32

    $default  reduce using rule 41 (FINAL)


State 16

   34 ATRIB: LVALUEPROP . '=' RVALUE
   35      | LVALUEPROP . MEATR RVALUE
   42 FINAL: LVALUEPROP .

    MEATR  shift, and go to state 33
    '='    shift, and go to state 34

    $default  reduce using rule 42 (FINAL)


State 17

    4 CMD: RVALUE . ';'
    7 LVALUEPROP: RVALUE . '.' ID
    8           | RVALUE . '[' RVALUE ']'
   10 RVALUE: RVALUE . MEIG RVALUE
   11       | RVALUE . MAIG RVALUE
   12       | RVALUE . IG RVALUE
   13       | RVALUE . DIF RVALUE
   14       | RVALUE . '^' RVALUE
   15       | RVALUE . '<' RVALUE
   16       | RVALUE . '>' RVALUE
   17       | RVALUE . '*' RVALUE
   18       | RVALUE . '+' RVALUE
   19       | RVALUE . '-' RVALUE
   20       | RVALUE . '/' RVALUE
   21       | RVALUE . '%' RVALUE

    MAIG  shift, and go to state 35
    MEIG  shift, and go to state 36
    IG    shift, and go to state 37
    DIF   shift, and go to state 38
    '<'   shift, and go to state 39
    '>'   shift, and go to state 40
    '['   shift, and go to state 41
    '.'   shift, and go to state 42
    '+'   shift, and go to state 43
    '-'   shift, and go to state 44
    '*'   shift, and go to state 45
    '/'   shift, and go to state 46
    '%'   shift, and go to state 47
    '^'   shift, and go to state 48
    ';'   shift, and go to state 49


State 18

    5 CMD: CMD_DECL . ';'

    ';'  shift, and go to state 50


State 19

    9 RVALUE: ATRIB .

    $default  reduce using rule 9 (RVALUE)


State 20

   24 RVALUE: FINAL .

    $default  reduce using rule 24 (RVALUE)


State 21

    6 LVALUE: ID .
   30 MULTI_DECL: ID . ',' MULTI_DECL
   31           | ID .

    ','  shift, and go to state 51

    ';'       reduce using rule 31 (MULTI_DECL)
    $default  reduce using rule 6 (LVALUE)


State 22

   28 MULTI_DECL: LVALUE . '=' RVALUE ',' MULTI_DECL
   29           | LVALUE . '=' RVALUE

    '='  shift, and go to state 52


State 23

   25 CMD_DECL: LET MULTI_DECL .

    $default  reduce using rule 25 (CMD_DECL)


State 24

   27 CMD_DECL: CONST MULTI_DECL .

    $default  reduce using rule 27 (CMD_DECL)


State 25

   26 CMD_DECL: VAR MULTI_DECL .

    $default  reduce using rule 26 (CMD_DECL)


State 26

    7 LVALUEPROP: RVALUE . '.' ID
    8           | RVALUE . '[' RVALUE ']'
   10 RVALUE: RVALUE . MEIG RVALUE
   11       | RVALUE . MAIG RVALUE
   12       | RVALUE . IG RVALUE
   13       | RVALUE . DIF RVALUE
   14       | RVALUE . '^' RVALUE
   15       | RVALUE . '<' RVALUE
   16       | RVALUE . '>' RVALUE
   17       | RVALUE . '*' RVALUE
   18       | RVALUE . '+' RVALUE
   19       | RVALUE . '-' RVALUE
   20       | RVALUE . '/' RVALUE
   21       | RVALUE . '%' RVALUE
   22       | '+' RVALUE .

    '*'  shift, and go to state 45
    '/'  shift, and go to state 46
    '%'  shift, and go to state 47
    '^'  shift, and go to state 48

    $default  reduce using rule 22 (RVALUE)


State 27

    7 LVALUEPROP: RVALUE . '.' ID
    8           | RVALUE . '[' RVALUE ']'
   10 RVALUE: RVALUE . MEIG RVALUE
   11       | RVALUE . MAIG RVALUE
   12       | RVALUE . IG RVALUE
   13       | RVALUE . DIF RVALUE
   14       | RVALUE . '^' RVALUE
   15       | RVALUE . '<' RVALUE
   16       | RVALUE . '>' RVALUE
   17       | RVALUE . '*' RVALUE
   18       | RVALUE . '+' RVALUE
   19       | RVALUE . '-' RVALUE
   20       | RVALUE . '/' RVALUE
   21       | RVALUE . '%' RVALUE
   23       | '-' RVALUE .

    '*'  shift, and go to state 45
    '/'  shift, and go to state 46
    '%'  shift, and go to state 47
    '^'  shift, and go to state 48

    $default  reduce using rule 23 (RVALUE)


State 28

    7 LVALUEPROP: RVALUE . '.' ID
    8           | RVALUE . '[' RVALUE ']'
   10 RVALUE: RVALUE . MEIG RVALUE
   11       | RVALUE . MAIG RVALUE
   12       | RVALUE . IG RVALUE
   13       | RVALUE . DIF RVALUE
   14       | RVALUE . '^' RVALUE
   15       | RVALUE . '<' RVALUE
   16       | RVALUE . '>' RVALUE
   17       | RVALUE . '*' RVALUE
   18       | RVALUE . '+' RVALUE
   19       | RVALUE . '-' RVALUE
   20       | RVALUE . '/' RVALUE
   21       | RVALUE . '%' RVALUE
   40 FINAL: '(' RVALUE . ')'

    MAIG  shift, and go to state 35
    MEIG  shift, and go to state 36
    IG    shift, and go to state 37
    DIF   shift, and go to state 38
    '<'   shift, and go to state 39
    '>'   shift, and go to state 40
    '['   shift, and go to state 41
    '.'   shift, and go to state 42
    '+'   shift, and go to state 43
    '-'   shift, and go to state 44
    '*'   shift, and go to state 45
    '/'   shift, and go to state 46
    '%'   shift, and go to state 47
    '^'   shift, and go to state 48
    ')'   shift, and go to state 53


State 29

    0 $accept: S $end .

    $default  accept


State 30

    2 CMDs: CMD CMDs .

    $default  reduce using rule 2 (CMDs)


State 31

   33 ATRIB: LVALUE MAATR . RVALUE

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 54
    ATRIB       go to state 19
    FINAL       go to state 20


State 32

   32 ATRIB: LVALUE '=' . RVALUE

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 55
    ATRIB       go to state 19
    FINAL       go to state 20


State 33

   35 ATRIB: LVALUEPROP MEATR . RVALUE

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 56
    ATRIB       go to state 19
    FINAL       go to state 20


State 34

   34 ATRIB: LVALUEPROP '=' . RVALUE

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 57
    ATRIB       go to state 19
    FINAL       go to state 20


State 35

   11 RVALUE: RVALUE MAIG . RVALUE

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 58
    ATRIB       go to state 19
    FINAL       go to state 20


State 36

   10 RVALUE: RVALUE MEIG . RVALUE

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 59
    ATRIB       go to state 19
    FINAL       go to state 20


State 37

   12 RVALUE: RVALUE IG . RVALUE

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 60
    ATRIB       go to state 19
    FINAL       go to state 20


State 38

   13 RVALUE: RVALUE DIF . RVALUE

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 61
    ATRIB       go to state 19
    FINAL       go to state 20


State 39

   15 RVALUE: RVALUE '<' . RVALUE

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 62
    ATRIB       go to state 19
    FINAL       go to state 20


State 40

   16 RVALUE: RVALUE '>' . RVALUE

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 63
    ATRIB       go to state 19
    FINAL       go to state 20


State 41

    8 LVALUEPROP: RVALUE '[' . RVALUE ']'

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 64
    ATRIB       go to state 19
    FINAL       go to state 20


State 42

    7 LVALUEPROP: RVALUE '.' . ID

    ID  shift, and go to state 65


State 43

   18 RVALUE: RVALUE '+' . RVALUE

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 66
    ATRIB       go to state 19
    FINAL       go to state 20


State 44

   19 RVALUE: RVALUE '-' . RVALUE

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 67
    ATRIB       go to state 19
    FINAL       go to state 20


State 45

   17 RVALUE: RVALUE '*' . RVALUE

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 68
    ATRIB       go to state 19
    FINAL       go to state 20


State 46

   20 RVALUE: RVALUE '/' . RVALUE

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 69
    ATRIB       go to state 19
    FINAL       go to state 20


State 47

   21 RVALUE: RVALUE '%' . RVALUE

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 70
    ATRIB       go to state 19
    FINAL       go to state 20


State 48

   14 RVALUE: RVALUE '^' . RVALUE

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 71
    ATRIB       go to state 19
    FINAL       go to state 20


State 49

    4 CMD: RVALUE ';' .

    $default  reduce using rule 4 (CMD)


State 50

    5 CMD: CMD_DECL ';' .

    $default  reduce using rule 5 (CMD)


State 51

   30 MULTI_DECL: ID ',' . MULTI_DECL

    ID  shift, and go to state 21

    LVALUE      go to state 22
    MULTI_DECL  go to state 72


State 52

   28 MULTI_DECL: LVALUE '=' . RVALUE ',' MULTI_DECL
   29           | LVALUE '=' . RVALUE

    ID         shift, and go to state 1
    NUM        shift, and go to state 2
    STRING     shift, and go to state 3
    NEWOBJECT  shift, and go to state 7
    NEWARRAY   shift, and go to state 8
    '+'        shift, and go to state 9
    '-'        shift, and go to state 10
    '('        shift, and go to state 11

    LVALUE      go to state 15
    LVALUEPROP  go to state 16
    RVALUE      go to state 73
    ATRIB       go to state 19
    FINAL       go to state 20


State 53

   40 FINAL: '(' RVALUE ')' .

    $default  reduce using rule 40 (FINAL)


State 54

    7 LVALUEPROP: RVALUE . '.' ID
    8           | RVALUE . '[' RVALUE ']'
   10 RVALUE: RVALUE . MEIG RVALUE
   11       | RVALUE . MAIG RVALUE
   12       | RVALUE . IG RVALUE
   13       | RVALUE . DIF RVALUE
   14       | RVALUE . '^' RVALUE
   15       | RVALUE . '<' RVALUE
   16       | RVALUE . '>' RVALUE
   17       | RVALUE . '*' RVALUE
   18       | RVALUE . '+' RVALUE
   19       | RVALUE . '-' RVALUE
   20       | RVALUE . '/' RVALUE
   21       | RVALUE . '%' RVALUE
   33 ATRIB: LVALUE MAATR RVALUE .

    MAIG  shift, and go to state 35
    MEIG  shift, and go to state 36
    IG    shift, and go to state 37
    DIF   shift, and go to state 38
    '<'   shift, and go to state 39
    '>'   shift, and go to state 40
    '['   shift, and go to state 41
    '.'   shift, and go to state 42
    '+'   shift, and go to state 43
    '-'   shift, and go to state 44
    '*'   shift, and go to state 45
    '/'   shift, and go to state 46
    '%'   shift, and go to state 47
    '^'   shift, and go to state 48

    $default  reduce using rule 33 (ATRIB)


State 55

    7 LVALUEPROP: RVALUE . '.' ID
    8           | RVALUE . '[' RVALUE ']'
   10 RVALUE: RVALUE . MEIG RVALUE
   11       | RVALUE . MAIG RVALUE
   12       | RVALUE . IG RVALUE
   13       | RVALUE . DIF RVALUE
   14       | RVALUE . '^' RVALUE
   15       | RVALUE . '<' RVALUE
   16       | RVALUE . '>' RVALUE
   17       | RVALUE . '*' RVALUE
   18       | RVALUE . '+' RVALUE
   19       | RVALUE . '-' RVALUE
   20       | RVALUE . '/' RVALUE
   21       | RVALUE . '%' RVALUE
   32 ATRIB: LVALUE '=' RVALUE .

    MAIG  shift, and go to state 35
    MEIG  shift, and go to state 36
    IG    shift, and go to state 37
    DIF   shift, and go to state 38
    '<'   shift, and go to state 39
    '>'   shift, and go to state 40
    '['   shift, and go to state 41
    '.'   shift, and go to state 42
    '+'   shift, and go to state 43
    '-'   shift, and go to state 44
    '*'   shift, and go to state 45
    '/'   shift, and go to state 46
    '%'   shift, and go to state 47
    '^'   shift, and go to state 48

    $default  reduce using rule 32 (ATRIB)


State 56

    7 LVALUEPROP: RVALUE . '.' ID
    8           | RVALUE . '[' RVALUE ']'
   10 RVALUE: RVALUE . MEIG RVALUE
   11       | RVALUE . MAIG RVALUE
   12       | RVALUE . IG RVALUE
   13       | RVALUE . DIF RVALUE
   14       | RVALUE . '^' RVALUE
   15       | RVALUE . '<' RVALUE
   16       | RVALUE . '>' RVALUE
   17       | RVALUE . '*' RVALUE
   18       | RVALUE . '+' RVALUE
   19       | RVALUE . '-' RVALUE
   20       | RVALUE . '/' RVALUE
   21       | RVALUE . '%' RVALUE
   35 ATRIB: LVALUEPROP MEATR RVALUE .

    MAIG  shift, and go to state 35
    MEIG  shift, and go to state 36
    IG    shift, and go to state 37
    DIF   shift, and go to state 38
    '<'   shift, and go to state 39
    '>'   shift, and go to state 40
    '['   shift, and go to state 41
    '.'   shift, and go to state 42
    '+'   shift, and go to state 43
    '-'   shift, and go to state 44
    '*'   shift, and go to state 45
    '/'   shift, and go to state 46
    '%'   shift, and go to state 47
    '^'   shift, and go to state 48

    $default  reduce using rule 35 (ATRIB)


State 57

    7 LVALUEPROP: RVALUE . '.' ID
    8           | RVALUE . '[' RVALUE ']'
   10 RVALUE: RVALUE . MEIG RVALUE
   11       | RVALUE . MAIG RVALUE
   12       | RVALUE . IG RVALUE
   13       | RVALUE . DIF RVALUE
   14       | RVALUE . '^' RVALUE
   15       | RVALUE . '<' RVALUE
   16       | RVALUE . '>' RVALUE
   17       | RVALUE . '*' RVALUE
   18       | RVALUE . '+' RVALUE
   19       | RVALUE . '-' RVALUE
   20       | RVALUE . '/' RVALUE
   21       | RVALUE . '%' RVALUE
   34 ATRIB: LVALUEPROP '=' RVALUE .

    MAIG  shift, and go to state 35
    MEIG  shift, and go to state 36
    IG    shift, and go to state 37
    DIF   shift, and go to state 38
    '<'   shift, and go to state 39
    '>'   shift, and go to state 40
    '['   shift, and go to state 41
    '.'   shift, and go to state 42
    '+'   shift, and go to state 43
    '-'   shift, and go to state 44
    '*'   shift, and go to state 45
    '/'   shift, and go to state 46
    '%'   shift, and go to state 47
    '^'   shift, and go to state 48

    $default  reduce using rule 34 (ATRIB)


State 58

    7 LVALUEPROP: RVALUE . '.' ID
    8           | RVALUE . '[' RVALUE ']'
   10 RVALUE: RVALUE . MEIG RVALUE
   11       | RVALUE . MAIG RVALUE
   11       | RVALUE MAIG RVALUE .
   12       | RVALUE . IG RVALUE
   13       | RVALUE . DIF RVALUE
   14       | RVALUE . '^' RVALUE
   15       | RVALUE . '<' RVALUE
   16       | RVALUE . '>' RVALUE
   17       | RVALUE . '*' RVALUE
   18       | RVALUE . '+' RVALUE
   19       | RVALUE . '-' RVALUE
   20       | RVALUE . '/' RVALUE
   21       | RVALUE . '%' RVALUE

    '.'  shift, and go to state 42
    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '*'  shift, and go to state 45
    '/'  shift, and go to state 46
    '%'  shift, and go to state 47
    '^'  shift, and go to state 48

    MAIG  error (nonassociative)
    MEIG  error (nonassociative)
    IG    error (nonassociative)
    DIF   error (nonassociative)
    '<'   error (nonassociative)
    '>'   error (nonassociative)
    '['   error (nonassociative)

    $default  reduce using rule 11 (RVALUE)


State 59

    7 LVALUEPROP: RVALUE . '.' ID
    8           | RVALUE . '[' RVALUE ']'
   10 RVALUE: RVALUE . MEIG RVALUE
   10       | RVALUE MEIG RVALUE .
   11       | RVALUE . MAIG RVALUE
   12       | RVALUE . IG RVALUE
   13       | RVALUE . DIF RVALUE
   14       | RVALUE . '^' RVALUE
   15       | RVALUE . '<' RVALUE
   16       | RVALUE . '>' RVALUE
   17       | RVALUE . '*' RVALUE
   18       | RVALUE . '+' RVALUE
   19       | RVALUE . '-' RVALUE
   20       | RVALUE . '/' RVALUE
   21       | RVALUE . '%' RVALUE

    '.'  shift, and go to state 42
    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '*'  shift, and go to state 45
    '/'  shift, and go to state 46
    '%'  shift, and go to state 47
    '^'  shift, and go to state 48

    MAIG  error (nonassociative)
    MEIG  error (nonassociative)
    IG    error (nonassociative)
    DIF   error (nonassociative)
    '<'   error (nonassociative)
    '>'   error (nonassociative)
    '['   error (nonassociative)

    $default  reduce using rule 10 (RVALUE)


State 60

    7 LVALUEPROP: RVALUE . '.' ID
    8           | RVALUE . '[' RVALUE ']'
   10 RVALUE: RVALUE . MEIG RVALUE
   11       | RVALUE . MAIG RVALUE
   12       | RVALUE . IG RVALUE
   12       | RVALUE IG RVALUE .
   13       | RVALUE . DIF RVALUE
   14       | RVALUE . '^' RVALUE
   15       | RVALUE . '<' RVALUE
   16       | RVALUE . '>' RVALUE
   17       | RVALUE . '*' RVALUE
   18       | RVALUE . '+' RVALUE
   19       | RVALUE . '-' RVALUE
   20       | RVALUE . '/' RVALUE
   21       | RVALUE . '%' RVALUE

    '.'  shift, and go to state 42
    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '*'  shift, and go to state 45
    '/'  shift, and go to state 46
    '%'  shift, and go to state 47
    '^'  shift, and go to state 48

    MAIG  error (nonassociative)
    MEIG  error (nonassociative)
    IG    error (nonassociative)
    DIF   error (nonassociative)
    '<'   error (nonassociative)
    '>'   error (nonassociative)
    '['   error (nonassociative)

    $default  reduce using rule 12 (RVALUE)


State 61

    7 LVALUEPROP: RVALUE . '.' ID
    8           | RVALUE . '[' RVALUE ']'
   10 RVALUE: RVALUE . MEIG RVALUE
   11       | RVALUE . MAIG RVALUE
   12       | RVALUE . IG RVALUE
   13       | RVALUE . DIF RVALUE
   13       | RVALUE DIF RVALUE .
   14       | RVALUE . '^' RVALUE
   15       | RVALUE . '<' RVALUE
   16       | RVALUE . '>' RVALUE
   17       | RVALUE . '*' RVALUE
   18       | RVALUE . '+' RVALUE
   19       | RVALUE . '-' RVALUE
   20       | RVALUE . '/' RVALUE
   21       | RVALUE . '%' RVALUE

    '.'  shift, and go to state 42
    '+'  shift, and go to state 43
    '-'  shift, and go to state 44
    '*'  shift, and go to state 45
    '/'  shift, and go to state 46
    '%'  shift, and go to state 47
    '^'  shift, and go to state 48
